--- a/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
@@ -1,4 +1,5 @@
 <div class="buckaroo_magento2_klarna payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+    
     <div class="payment-method-title field choice">
         <input type="radio"
                name="payment[method]"
@@ -8,6 +9,25 @@
     </div>
 
         <div class="payment-method-content">
+
+            <div class="field required">
+                <label class="label" for="buckaroo_magento2_klarna_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
+                <div class="control">
+                    <ul id="Saluation">
+                        <li>            
+                            <select id="buckaroo_magento2_klarna_genderSelect" name="payment[buckaroo_magento2_klarna][customer_gender]" class="select"
+                            data-bind="options: gendersList(),
+                             optionsText: $t('genderTitle'),
+                             optionsValue: 'genderType',
+                             optionsCaption: $t('-- Please Select Your Gender--'),
+                             value: getSelectedGender,
+                             event: { change: setSelectedGender }, attr: { 'data-validate': JSON.stringify({ 'required': true })}">
+                             </select>
+                        </li>
+                    </ul>
+                    <div for="gender" generated="true" class="mage-error" id="gender-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
+                </div>
+            </div>
 
             <div class="payment-method-billing-address">
             <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
@@ -23,7 +43,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        css: {disabled: !isPlaceOrderActionAllowed() }
+                        css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
                         disabled
                         type="submit">
