--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -27,29 +27,15 @@
                         <legend class="label"> <span data-bind="i18n: 'Salutation:'"> </span> </legend>
                         <div class="control">
                             <ul id="Saluation">
-                                <li>
-                                    <input type="radio" id="buckaroo_magento2_payperemail_genderSelectMan"
-                                           data-bind="
-                                               value: '1',
-                                               click: setSelectedGender.bind($data, '1'),
-                                               attr: { 'data-validate': JSON.stringify({ 'required': true }) },
-                                               checked: genderValidate
-                                               "
-                                           class="field"
-                                           name="payment[buckaroo_magento2_payperemail][customer_gender]">
-                                    <label for="buckaroo_magento2_payperemail_genderSelectMan"> <span data-bind="i18n: 'Mr.' "> </span> </label>
-                                </li>
-                                <li>
-                                    <input type="radio" id="buckaroo_magento2_payperemail_genderSelectWoman"
-                                           data-bind="
-                                               value: '2',
-                                               click: setSelectedGender.bind($data, '2'),
-                                               attr: { 'data-validate': JSON.stringify({ 'required': true }) },
-                                               checked: genderValidate
-                                            "
-                                           class="field"
-                                           name="payment[buckaroo_magento2_payperemail][customer_gender]">
-                                    <label for="buckaroo_magento2_payperemail_genderSelectWoman"> <span data-bind="i18n: 'Mrs.' "> </span> </label>
+                                <li>            
+                                    <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]" class="field"
+                                    data-bind="options: gendersList(),
+                                     optionsText: $t('genderTitle'),
+                                     optionsValue: 'genderType',
+                                     optionsCaption: $t('-- Please Select Your Gender--'),
+                                     value: getSelectedGender,
+                                     event: { change: setSelectedGender }, attr: { 'data-validate': JSON.stringify({ 'required': true })}" class="select">
+                                     </select>
                                 </li>
                             </ul>
                             <div for="gender" generated="true" class="mage-error" id="gender-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
