BP-1325 Buckaroo fee refund in creditmemo disappears

--- a/view/adminhtml/layout/sales_order_creditmemo_updateqty.xml
+++ b/view/adminhtml/layout/sales_order_creditmemo_updateqty.xml
@@ -32,6 +32,6 @@
                    template="Buckaroo_Magento2::sales/order/creditmemo/buckaroo_already_paid.phtml"
                 />
         </referenceBlock>
-         <move element="buckaroo_already_paid" destination="creditmemo_totals" after="creditmemo_totals" />
+         <move element="buckaroo_already_paid" destination="order_items" after="creditmemo_totals" />
     </body>
 </page>
