Fix afterpay new disabled button

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -158,7 +158,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
+                        css: {disabled: !(isPlaceOrderActionAllowed() || buttoncheck()) }
                         "
                         disabled>
                     <span data-bind="i18n: 'Place Order'"></span>
