BP-2056 AfterPay (new) not working with 2.4.5

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -105,7 +105,6 @@
                                             dateFormat: 'dd/MM/yy'
                                         }
                                    },
-                                   event: { change: selectPaymentMethod },
                                    valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
@@ -158,7 +157,7 @@
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
-                        css: {disabled: !(isPlaceOrderActionAllowed() || buttoncheck()) }
+                        css: {disabled: !isPlaceOrderActionAllowed() || !buttoncheck() }
                         "
                         disabled>
                     <span data-bind="i18n: 'Place Order'"></span>
