--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
@@ -52,6 +52,22 @@
                         </div>
                     </div>
 
+                     <!-- ko if: showPhone -->
+                     <div class="field required" >
+                        <label class="label" for="buckaroo_magento2_capayablein3_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
+                        <div class="control">
+                            <input id="buckaroo_magento2_capayablein3_Telephone"
+                                   type="text"
+                                   class="input-text field"
+                                   data-bind="
+                                   attr: { 'data-validate': JSON.stringify({ 'phoneValidation': true, 'required': true }) },
+                                   valueUpdate: 'blur',
+                                   value: phone"
+                                   name="payment[buckaroo_magento2_capayablein3][customer_telephone]">
+                        </div>
+                    </div>
+                    <!-- /ko -->
+
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_capayablein3_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
