--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -174,7 +174,7 @@
                             <span>
                                 <a target="_blank"
                                    data-bind="
-                                       i18n: 'Yes, I accept the terms and condition for the use of Afterpay.',
+                                       i18n: 'Yes, I accept the terms and condition for the use of Riverty | Afterpay.',
                                        attr: { 'href': termsUrl }
                                    ">
                                 </a>
