BP-2079 CreditClick - Refactor - Payment Provider Gateway

--- a/view/adminhtml/web/css/sales_styles.css
+++ b/view/adminhtml/web/css/sales_styles.css
@@ -79,9 +79,23 @@
 .buckaroo_magento2_payment_capayablepostpay,
 .buckaroo_magento2_payment_pospayment
 .buckaroo_magento2_payment_tinka
+.buckaroo_magento2_payment_creditclick
 {
     float:left;
     width: 100%;
+}
+
+
+/* Creditclick */
+.buckaroo_magento2_payment_creditclick:before {
+    background: url(../images/buckaroo_magento2_creditclick_title.png) no-repeat;
+    margin-top: 0;
+    float: left;
+    margin-right: 10px;
+    background-size: auto 23px;
+    width: 36px;
+    height: 35px;
+    content: ' ';
 }
 
 /* Afterpay */
