--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -67,7 +67,8 @@
     .buckaroo_magento2_capayablein3 .payment-method-second-col,
     .buckaroo_magento2_capayablepostpay .payment-method-second-col,
     .buckaroo_magento2_tinka .payment-method-second-col,
-    .buckaroo_magento2_mrcash .payment-method-second-col
+    .buckaroo_magento2_mrcash .payment-method-second-col,
+    .buckaroo_magento2_voucher .payment-method-second-col
     {
         float:left;
         width: 50%;
@@ -95,7 +96,8 @@
     .buckaroo_magento2_capayablein3 .payment-method-billing-address,
     .buckaroo_magento2_capayablepostpay .payment-method-billing-address,
     .buckaroo_magento2_tinka .payment-method-billing-address,
-    .buckaroo_magento2_mrcash .payment-method-billing-address
+    .buckaroo_magento2_mrcash .payment-method-billing-address,
+    .buckaroo_magento2_voucher .payment-method-billing-address
     {
         float:left;
         width: 50%;
