BP-2092 - Remove unused DataBuilder, Remove AbstractMethod and all payment methods, Remove Unit Tests, Change AbstractMethod with BuckarooAdapter
Trying to remove all afterCancel Order plugins and use virtualType instead but from 2.4.2 using virtualType as the class of the plugin doesn't work https://github.com/magento/magento2/issues/33980

--- a/view/adminhtml/templates/info/payment_method.phtml
+++ b/view/adminhtml/templates/info/payment_method.phtml
@@ -23,7 +23,7 @@
  * @var $block \Buckaroo\Magento2\Block\Info
  */
 ?>
-<?php /** @var \Buckaroo\Magento2\Model\Method\AbstractMethod $method */ ?>
+<?php /** @var \Buckaroo\Magento2\Model\Method\BuckarooAdapter $method */ ?>
 <?php
 if ($giftCards = $block->getGiftCards()) {
     foreach ($giftCards as $giftCard) { ?>
