--- a/view/frontend/templates/info/creditcard.phtml
+++ b/view/frontend/templates/info/creditcard.phtml
@@ -23,7 +23,7 @@
  * @var $block \Buckaroo\Magento2\Block\Info\Creditcard
  */
 ?>
-<?php /** @var \Buckaroo\Magento2\Model\Method\AbstractMethod $method */ ?>
+<?php /** @var \Buckaroo\Magento2\Model\Method\BuckarooAdapter $method */ ?>
 <?php $method = $block->getMethod(); ?>
 <div class="buckaroo_magento2_payment_<?php echo $block->escapeHtml($method->buckarooPaymentMethodCode); ?>">
     <?php echo $block->escapeHtml($block->getMethod()->getTitle()) ?>
