--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -96,8 +96,7 @@
         ['order-billing_address_firstname', 'buckaroo_magento2_payperemail_BillingFirstName'],
         ['order-billing_address_lastname', 'buckaroo_magento2_payperemail_BillingLastName'],
     ].forEach(function (item) {
-        if (
-            document.getElementById(item[1]) && (document.getElementById(item[1]).value.length == 0) &&
+        if (document.getElementById(item[1]) && (document.getElementById(item[1]).value.length == 0) &&
             document.getElementById(item[0]) && (document.getElementById(item[0]).value.length > 0)
         ) {
             document.getElementById(item[1]).value = document.getElementById(item[0]).value;
@@ -107,8 +106,7 @@
     [
         ['order-billing_address_prefix', 'buckaroo_magento2_payperemail_genderSelect']
     ].forEach(function (item) {
-        if (
-            document.getElementById(item[1]) &&
+        if (document.getElementById(item[1]) &&
             document.getElementById(item[0]) && (document.getElementById(item[0]).value.length > 0)
         ) {
             document.getElementById(item[1]).value = 1;
