BP-2095 - Avoid using closing slash with void tags, this can lead to unexpected behavior - "<input

--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
@@ -21,7 +21,7 @@
         <input type="radio"
                name="payment[method]"
                class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()">
         <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': getCode()}" ><span data-bind="text: getTitle()"></span></label>
     </div>
 
