--- a/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
@@ -1,10 +1,10 @@
 <div class="buckaroo_magento2_klarna payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
-    
+
     <div class="payment-method-title field choice">
         <input type="radio"
                name="payment[method]"
                class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()">
         <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': getCode()}"><span data-bind="text: getTitle()"></span></label>
     </div>
 
@@ -14,7 +14,7 @@
                 <label class="label" for="buckaroo_magento2_klarna_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
                 <div class="control">
                     <ul id="Saluation">
-                        <li>            
+                        <li>
                             <select id="buckaroo_magento2_klarna_genderSelect" name="payment[buckaroo_magento2_klarna][customer_gender]" class="select"
                             data-bind="options: gendersList(),
                              optionsText: $t('genderTitle'),
