--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnain.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnain.html
@@ -3,7 +3,7 @@
         <input type="radio"
                name="payment[method]"
                class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()">
         <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': getCode()}"><span data-bind="text: getTitle()"></span></label>
     </div>
 
@@ -13,7 +13,7 @@
                 <label class="label" for="buckaroo_magento2_klarnain_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
                 <div class="control">
                     <ul id="Saluation">
-                        <li>            
+                        <li>
                             <select id="buckaroo_magento2_klarnain_genderSelect" name="payment[buckaroo_magento2_klarnain][customer_gender]" class="select"
                             data-bind="options: gendersList(),
                              optionsText: $t('genderTitle'),
