--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -3,7 +3,7 @@
         <input type="radio"
                name="payment[method]"
                class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()">
         <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': getCode()}"><span data-bind="text: getTitle()"></span></label>
     </div>
 
@@ -27,7 +27,7 @@
                         <legend class="label"> <span data-bind="i18n: 'Salutation:'"> </span> </legend>
                         <div class="control">
                             <ul id="Saluation">
-                                <li>            
+                                <li>
                                     <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]" class="field"
                                     data-bind="options: gendersList(),
                                      optionsText: $t('genderTitle'),
