--- a/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
@@ -1,7 +1,7 @@
 <div class="buckaroo_magento2_voucher payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio" name="payment[method]" class="radio"
-            data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
+            data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()">
         <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': getCode()}"><span
                 data-bind="text: getTitle()"></span></label>
     </div>
