BP-2316 Afterpay Dutch translation missing for "CoC-number:"

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -40,7 +40,7 @@
 
                      <!-- ko if: showCOC -->
                      <div class="field required">
-                        <legend class="label"> <span data-bind="i18n: 'CoC-number:'"> </span> </legend>
+                        <legend class="label"> <span data-bind="i18n: 'COC Number:'"> </span> </legend>
                         <div class="control">
                             <input id="buckaroo_magento2_afterpay20_coc"
                                    class="input-text field"
