--- a/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
@@ -11,7 +11,7 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/sepa-credittransfer.svg') }" />
             </div>
         </div>
     </div>
