--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -64,7 +64,7 @@
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_afterpay2_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
-                        <div class="control">
+                        <div class="control addon">
                             <input id="buckaroo_magento2_afterpay2_DoB"
                                    class="field"
                                    type="text"
@@ -80,9 +80,8 @@
                                    },
                                    valueUpdate: 'change',
                                    value: dateValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true })}"
                                    name="payment[buckaroo_magento2_afterpay2][customer_DoB]">
-                            <div for="buckaroo_magento2_afterpay2_DoB" class="mage-error" id="buckaroo_magento2_afterpay2_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
                         </div>
                     </div>
 
