added maxlength on the coc field

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -54,6 +54,7 @@
                                    class="input-text field"
                                    type="text"
                                    name="payment[buckaroo_magento2_afterpay20][customer_coc]"
+                                   maxlength="8"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCOC': true }) },
                                    valueUpdate: 'blur',
