--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_afterpay20 payment-method" data-bind="click: magentoTerms(), css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_afterpay20 payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -39,7 +39,6 @@
                                    name="payment[buckaroo_magento2_afterpay20][buckaroo_identification_number]"
                                    data-bind="
                                    attr: { 'data-validate': JSON.stringify({ 'required': true }) },
-                                   checked: identificationValidate
                                    valueUpdate: 'blur',
                                    value: identificationValidate
                                    ">
@@ -55,9 +54,9 @@
                                    class="input-text field"
                                    type="text"
                                    name="payment[buckaroo_magento2_afterpay20][customer_coc]"
+                                   maxlength="8"
                                    data-bind="
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true }) },
-                                   checked: customerCoc
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCOC': true }) },
                                    valueUpdate: 'blur',
                                    value: customerCoc
                                    ">
@@ -71,9 +70,7 @@
                             <input id="buckaroo_magento2_afterpay20_BillingName"
                                    class="input-text field"
                                    type="text"
-                                   data-bind="
-                                   value: BillingName,
-                                   textInput: CustomerName()"
+                                   data-bind="value: billingName"
                                    name="payment[buckaroo_magento2_afterpay20][customer_billingName]"
                                    disabled >
                         </div>
@@ -100,7 +97,7 @@
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_afterpay20_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
-                        <div class="control">
+                        <div class="control addon">
                             <input id="buckaroo_magento2_afterpay20_DoB"
                                    class="field"
                                    type="text"
@@ -116,9 +113,9 @@
                                    },
                                    valueUpdate: 'change',
                                    value: dateValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true })}"
                                    name="payment[buckaroo_magento2_afterpay20][customer_DoB]">
-                            <div for="buckaroo_magento2_afterpay20_DoB" generated="true" class="mage-error" id="buckaroo_magento2_afterpay20_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
+                            
                         </div>
                     </div>
                     <!-- /ko -->
