--- a/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_tinka payment-method" data-bind="click: magentoTerms(), css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_tinka payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -34,9 +34,7 @@
                             <input id="buckaroo_magento2_tinka_BillingName"
                                    class="input-text field"
                                    type="text"
-                                   data-bind="
-                                   value: BillingName,
-                                   textInput: CustomerName()"
+                                   data-bind="value: billingName"
                                    name="payment[buckaroo_magento2_tinka][customer_billingName]"
                                    disabled >
                         </div>
@@ -46,7 +44,7 @@
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_tinka_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
-                        <div class="control">
+                        <div class="control addon">
                             <input id="buckaroo_magento2_tinka_DoB"
                                    class="field"
                                    type="text"
@@ -62,9 +60,8 @@
                                    },
                                    valueUpdate: 'change',
                                    value: dateValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true })}"
                                    name="payment[buckaroo_magento2_tinka][customer_DoB]">
-                            <div for="buckaroo_magento2_tinka_DoB" generated="true" class="mage-error" id="buckaroo_magento2_tinka_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
                         </div>
                     </div>
                     <!-- /ko -->
