--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -51,7 +51,9 @@
                         </div>
 
                         <div class="field required bk-card-number">
-                            <label class="label" for="buckaroo_magento2_creditcards_cardnumber"> <span data-bind="i18n: 'Card number:'"> </span> </label>
+                            <label class="label" for="buckaroo_magento2_creditcards_cardnumber">
+                                <span data-bind="i18n: 'Card number:'"> </span>
+                            </label>
                                 <div class="bk-card-number-input-wrap">
                                     <div class="control">
                                         <input id="buckaroo_magento2_creditcards_cardnumber"
@@ -119,14 +121,7 @@
                                     },
                                     event: { blur: validateField }">
                                 </div>
-                                <!-- <div class="card_info width-10">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="510" height="510" viewBox="0 0 510 510"><path d="M229.5 382.5h51v-153h-51V382.5zM255 0C114.8 0 0 114.8 0 255s114.8 255 255 255 255-114.7 255-255S395.3 0 255 0zM255 459c-112.2 0-204-91.8-204-204S142.8 51 255 51s204 91.8 204 204S367.2 459 255 459zM229.5 178.5h51v-51h-51V178.5z"/></svg>
-                                    <div class="popup">
-                                        <span data-bind="i18n: 'Or CVV or CVC.' "> </span>
-                                        <br/><br/>
-                                        <span data-bind="i18n: 'A 3 or 4 digit code located to the right of signature strip on the back of your card, separate from the card number.' "></span>
-                                    </div>
-                                </div> -->
+                               
                             </div>
                         </div>
                         </div>
