--- a/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
@@ -40,6 +40,22 @@
                         </div>
                     </div>
 
+                    <!-- ko if: showPhone -->
+                    <div class="field required" >
+                        <label class="label" for="buckaroo_magento2_tinka_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
+                        <div class="control">
+                            <input id="buckaroo_magento2_tinka_Telephone"
+                                   type="text"
+                                   class="input-text field"
+                                   data-bind="
+                                   valueUpdate: 'blur',
+                                   value: phone,
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true })}"
+                                   name="payment[buckaroo_magento2_tinka][customer_telephone]">
+                        </div>
+                    </div>
+                    <!-- /ko -->
+                    
                     <!-- ko if: showNLBEFields -->
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_tinka_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
