fix validation issue on jquery data picker

--- a/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
@@ -78,7 +78,7 @@
                                    valueUpdate: 'blur',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true })},
-                                   event: { change: validateField }"
+                                   event: { blur: validateDob }"
                                    name="payment[buckaroo_magento2_tinka][customer_DoB]">
                         </div>
                     </div>
