--- a/view/frontend/layout/buckaroo_mrcash_pay.xml
+++ b/view/frontend/layout/buckaroo_mrcash_pay.xml
@@ -24,7 +24,7 @@
 
     <body>
         <referenceContainer name="content">
-            <block class="Buckaroo\Magento2\Block\Checkout\Mrcash\Pay" name="buckaroo_magento2.checkout.mrcash_pay" template="Buckaroo_Magento2::checkout/mrcash/pay.phtml" cacheable="false" />
+            <block class="Buckaroo\Magento2\Block\Checkout\Mrcash\Payconiq" name="buckaroo_magento2.checkout.mrcash_pay" template="Buckaroo_Magento2::checkout/mrcash/pay.phtml" cacheable="false" />
         </referenceContainer>
     </body>
 </page>
